fix mobile nav spacing

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -32,7 +32,7 @@
       font-size: .75rem;
       display: block;
       padding: 1rem;
-      margin-right: 1rem;
+      margin-right: .25rem;
     }
   }
   
